--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -33,7 +33,7 @@
     {% else %}
         <div class="empty-state">
             <p>You haven't created any short links yet.</p>
-            <a href="{{ url_for('web.index') }}" class="btn">Create Your First Link</a>
+            <a href="{{ url_for('web.create') }}" class="btn">Create Your First Link</a>
         </div>
     {% endif %}
 </div>
