--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}">
-    <link rel="alternate icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <!-- <link rel="alternate icon" href="{{ url_for('static', filename='favicon.ico') }}"> -->
     <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.svg') }}">
 
     <!-- Fonts -->
