feat: implemented the forgot password flow

--- a/app/templates/forgot_password_confirmation.html
+++ b/app/templates/forgot_password_confirmation.html
@@ -18,6 +18,9 @@
         <p class="auth-description">
             If an account exists with this email, you'll receive an email with instructions to reset your password shortly.
         </p>
+        <p class="auth-description">
+            Don't see the email? Check your spam or junk folder.
+        </p>
         <div class="confirmation-actions">
             <a href="{{ url_for('web.login') }}" class="btn">Back to Login</a>
         </div>
