--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -167,6 +167,10 @@
                     </a>
                 </div>
 
+                <div class="footer-links">
+                    <a href="{{ url_for('web.privacy') }}" class="footer-link">Privacy Policy</a>
+                </div>
+
                 <p class="footer-copyright">&copy; <span id="current-year"></span> Briefen. All rights reserved.</p>
             </div>
         </div>
